# cargo-sdl-apk

./: Cargo.toml  Cargo.toml.orig  README.md  deploy.sh
src/: android_project.rs  build_bin_as_lib.rs  main.rs  util.rs
