[package]
edition = "2021"
name = "cargo-sdl-apk"
version = "1.0.0"
description = "Build Android packages that use SDL"
readme = "README.md"

[dependencies]
cargo = "0.70.1"
cargo-util = "0.2.3"
fs_extra = "1.3.0"
toml = "0.7.3"
symlink = "0.1.0"
pico-args = "0.5.0"
regex = "1.9.5"
lazy_static = "1.4.0"
walkdir = "2.4.0"
